@@ -147,6 +147,9 @@ Version 7.3 20-Aug-07
 
 26. Patterns such as [\P{Yi}A] which include \p or \P and just one other 
     character were causing crashes (broken optimization).
+    
+27. Patterns such as (\P{Yi}*\277)* (group with possible zero repeat containing
+    \p or \P) caused a compile-time loop. 
 
 
 Version 7.2 19-Jun-07
